// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: Activity_listBase
message Activity_listBase
{	
	
	
	repeated Activity_listDefine Activity_list = 1; // Activity_list

}

// Defined in table: Activity_list
message Activity_listDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional string Type = 2; 
	
	
	optional string Name = 3; 
	
	
	optional int32 ClearType = 4; 
	
	
	optional int32 ClearType2 = 5; 
	
	
	optional string ResGroup = 6; 
	
	
	optional int32 KeepDayEnd = 7; 
	
	
	repeated int32 StartTime = 8; 
	
	
	repeated int32 EndTime = 9; 
	
	
	optional string Des = 10; 
	
	
	optional string Icon = 11; 
	
	
	optional string ImgId = 12; 
	
	
	optional string PanelName = 13; 
	
	
	optional int32 UnInShowPanel = 14; 
	
	
	optional string SubType = 15; 
	
	
	optional string Trigger = 16; 
	
	
	optional int32 TriggerType = 17; 

}

